Agregue hola mundo je

--- a/cosmos/uni_app/templates/home.html
+++ b/cosmos/uni_app/templates/home.html
@@ -20,6 +20,7 @@
     
     <h2>CARRERAS:</h2>                                              <!--SHOWS ALL carreras -->
     <ul>{% for i in carreras %}<li>{{i}}</li>{% endfor %}</ul>
+    <h1>Hola mundo</h1>
 
 </body>
 </html>
