--- a/cosmos/uni_app/templates/uni.html
+++ b/cosmos/uni_app/templates/uni.html
@@ -1,16 +1,18 @@
 {% extends "base.html" %}{% block title %}{{uni}}{% endblock %}
 {% block content %}                          <!-- GETS FROM ctx: unis, cats & carreras -->
 
-    <h1>{{uni.name}}</h1> <br>
+    <h1 class="title">{{uni.name}}</h1> <br>
 
     <p>{{uni.desc}}</p>
     
     <h5>
-        Tipo: {{uni.tipo}}<br>
-        Ubicación: {{uni.location}}
+        <span class="title fs-3">Tipo: </span> {{uni.tipo}}<br>
+        <span class="title fs-3">Ubicación: </span> {{uni.location}}
     </h5>
 
-    <h3>CARRERAS: </h3>
+    <br>
+    
+    <h3 class="title">CARRERAS: </h3>
     <ul>{% for i in carreras %}<li><a href="{% url 'main:carrera' i.id %}">{{i}}</a></li>{% endfor %}</ul>
 
 {% endblock %}
