--- a/cosmos/uni_app/templates/unis.html
+++ b/cosmos/uni_app/templates/unis.html
@@ -7,7 +7,7 @@
         {% for i in unis %}
         <div class="col">
             <div class="card">
-                <img src="{{i.imgs.first.img.url}}" class="card-img-top" alt="{{i.name}}">
+                <img src="{{i.imgs.first.img.url}}" class="card-img-top image-container" alt="{{i.name}}">
                 <div class="card-body">
                     <a class="card-title title" href="{% url 'main:uni' i.id %}">{{i.name}}</a> 
                     <p class="card-text">{{i.desc|slice:":100"}}...</p>
