--- a/cosmos/uni_app/templates/home.html
+++ b/cosmos/uni_app/templates/home.html
@@ -1,23 +1,80 @@
 {% extends "base.html" %}{% block title %}Home{% endblock %}
 {% block content %}                          <!-- GETS FROM ctx: unis, cats & carreras -->
-
-    <h2 class="title fs-1">HOME</h2>
-
-    <h4><a href="{% url 'main:unis' %}">VER UNIVERSIDADES</a></h4>
-
-    <h4><a href="{% url 'main:search' %}">IR A BÚSQUEDA</a></h4>
     
+<div class="mt-5">
+    <h1 class="serif" style="text-align: center; font-size: 4rem; margin: 20px 0;">"Encontrá tu lugar <br> en el <span class="italica">universo</span>"</h1>
+    <br>
+    <div class="d-flex justify-content-center align-items-center mb-4">
+        <form class="input-group" role="search" method="GET" action="{% url 'main:search' %}" style="max-width: 600px; width: 100%;">
+            <button class="btn btn-danger input-group-text" style="background-color: #5A0000; border: none; border-radius: 25px; margin-right: 10px;" type="submit" id="search-addon">
+                <i class="fa-solid fa-magnifying-glass"></i>
+            </button>
+            <input class="form-control" type="search" name="q" placeholder="Buscar por palabras clave" aria-label="Search" aria-describedby="search-addon" style="border-radius: 25px; margin-right: 10px;">
+        </form>
+        <a class="btn btn-danger me-2" style="background-color: #5A0000; border: none; border-radius: 25px;" href="{% url 'main:test' %}">COMPARADOR</a>
+    </div>
+</div>
+
+<br>
+
+<div class="row mb-5 justify-content-center">
+    <div class="col-lg-3 col-md-6 mb-4">
+        <div class="card h-100">
+            <div class="card-body">
+                <a href="#" class="card-title text-center no-line italica bold" style="font-size: 40px;">Carreras</a>
+                <p class="card-text" style="font-size: 15px;">Encuentra cursos y capacitaciones en diversas áreas que e ayudarán a complementar tus estudios y desarrollar nuevas habilidades.</p>
+            </div>
+        </div>
+    </div>
+    <div class="col-lg-3 col-md-6 mb-4">
+        <div class="card h-100">
+            <div class="card-body">
+                <a href="#" class="card-title text-center no-line italica bold" style="font-size: 40px;">Cursos</a>
+                <p class="card-text" style="font-size: 15px;">Explora las distintas opciones de carreras universitarias y descubre cuál se ajusta a tu vocación y metas profesionales.</p>
+            </div>
+        </div>
+    </div>
+    <div class="col-lg-3 col-md-6 mb-4">
+        <div class="card h-100">
+            <div class="card-body">
+                <a href="#" class="card-title text-center no-line italica bold" style="font-size: 40px;">Becas</a>
+                <p class="card-text" style="font-size: 15px;">Descubre oportunidades de becas disponibles para financiar tus estudios y alcanzar tus sueños académicos sin preocupaciones económicas.</p>
+            </div>
+        </div>
+    </div>
+</div>
+</div>
+
+<div class="d-flex justify-content-center align-items-center mb-4">
+    <a class="btn btn-danger me-2" style="background-color: #5A0000; border: none; border-radius: 25px;" href="{% url 'main:unis' %}"> VER UNIVERSIDADES </a>
+    <a class="btn btn-danger me-2" style="background-color: #5A0000; border: none; border-radius: 25px;" href="{% url 'main:search' %}"> IR A BÚSQUEDA </a>
+</div>
+
+<br>
+
     {% load custom_filters %}
-    {% for i in cats %}
-    <h2 class="title">{{i.name}}</h2>
-    <ul>
-        <li><form method="GET" action="{% url 'main:search' %}">
-            <input type="hidden" name="cat" value="{{i.id}}"><input type="submit" value="VER TODOS">
-        </form></li>
-        {% for j in carreras|get_by_cat:i.id %}
-            <li><a href="{% url 'main:carrera' j.id %}">{{j}}</a></li>
-        {% endfor %}
-    </ul>
-    {% endfor %}
+    <div class="container mt-5">
+        <div class="row">
+            {% for i in cats|dictsort:"name" %}
+            <div class="col-md-6 mb-4">
+                <div class="card h-100">
+                    <div class="card-header">
+                        <h2 class="title">{{ i.name }}</h2>
+                    </div>
+                    <div class="card-body">
+                        <ul class="list-unstyled mb-0">
+                            <li class="mb-2">
+                                <form method="GET" action="{% url 'main:search' %}">
+                                    <input type="hidden" name="cat" value="{{ i.id }}">
+                                    <input type="submit" class="btn btn-danger" value="VER TODOS" style="background-color: #5A0000; border: none; border-radius: 25px;">
+                                </form>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            {% endfor %}
+        </div>
+    </div>    
 
 {% endblock %}
