--- a/cosmos/uni_app/templates/unis.html
+++ b/cosmos/uni_app/templates/unis.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}{% block title %}Universidades{% endblock %}
 {% block content %}                          <!-- GETS FROM ctx: unis, cats & carreras -->
 
-    <h2 class="title fs-1">UNIS</h2>
+    <h2 class="title fs-1">UNIVERSIDADES</h2>
     
     <div class="row row-cols-4 g-4">
         {% for i in unis %}
