--- a/cosmos/uni_app/templates/home.html
+++ b/cosmos/uni_app/templates/home.html
@@ -6,7 +6,7 @@
     <br>
     <div class="d-flex justify-content-center align-items-center mb-4">
         <form class="input-group" role="search" method="GET" action="{% url 'main:search' %}" style="max-width: 600px; width: 100%;">
-            <button class="btn btn-danger input-group-text" style="background-color: #5A0000; border: none; border-radius: 25px; margin-right: 10px;" type="submit" id="search-addon">
+            <button class="btn btn-styles input-group-text" style="border: none; border-radius: 25px; margin-right: 10px;" type="submit" id="search-addon">
                 <i class="fa-solid fa-magnifying-glass"></i>
             </button>
             <input class="form-control" type="search" name="q" placeholder="Buscar por palabras clave" aria-label="Search" aria-describedby="search-addon" style="border-radius: 25px; margin-right: 10px;">
@@ -21,7 +21,7 @@
     <div class="col-lg-3 col-md-6 mb-4">
         <div class="card h-100">
             <div class="card-body">
-                <a href="#" class="card-title text-center no-line italica bold" style="font-size: 40px;">Carreras</a>
+                <a href="{% url 'main:search' %}" class="card-title text-center no-line" style="font-size: 40px;">Carreras</a>
                 <p class="card-text" style="font-size: 15px;">Encuentra cursos y capacitaciones en diversas áreas que e ayudarán a complementar tus estudios y desarrollar nuevas habilidades.</p>
             </div>
         </div>
@@ -29,7 +29,7 @@
     <div class="col-lg-3 col-md-6 mb-4">
         <div class="card h-100">
             <div class="card-body">
-                <a href="#" class="card-title text-center no-line italica bold" style="font-size: 40px;">Cursos</a>
+                <a href="#" class="card-title text-center no-line" style="font-size: 40px;">Cursos</a>
                 <p class="card-text" style="font-size: 15px;">Explora las distintas opciones de carreras universitarias y descubre cuál se ajusta a tu vocación y metas profesionales.</p>
             </div>
         </div>
@@ -37,7 +37,7 @@
     <div class="col-lg-3 col-md-6 mb-4">
         <div class="card h-100">
             <div class="card-body">
-                <a href="#" class="card-title text-center no-line italica bold" style="font-size: 40px;">Becas</a>
+                <a href="#" class="card-title text-center no-line" style="font-size: 40px;">Becas</a>
                 <p class="card-text" style="font-size: 15px;">Descubre oportunidades de becas disponibles para financiar tus estudios y alcanzar tus sueños académicos sin preocupaciones económicas.</p>
             </div>
         </div>
@@ -46,8 +46,8 @@
 </div>
 
 <div class="d-flex justify-content-center align-items-center mb-4">
-    <a class="btn btn-danger me-2" style="background-color: #5A0000; border: none; border-radius: 25px;" href="{% url 'main:unis' %}"> VER UNIVERSIDADES </a>
-    <a class="btn btn-danger me-2" style="background-color: #5A0000; border: none; border-radius: 25px;" href="{% url 'main:search' %}"> IR A BÚSQUEDA </a>
+    <a class="btn btn-styles me-2" style="border: none; border-radius: 25px;" href="{% url 'main:unis' %}"> VER UNIVERSIDADES </a>
+    <a class="btn btn-styles me-2" style="border: none; border-radius: 25px;" href="{% url 'main:search' %}"> IR A BÚSQUEDA </a>
 </div>
 
 <br>
@@ -66,7 +66,7 @@
                             <li class="mb-2">
                                 <form method="GET" action="{% url 'main:search' %}">
                                     <input type="hidden" name="cat" value="{{ i.id }}">
-                                    <input type="submit" class="btn btn-danger" value="VER TODOS" style="background-color: #5A0000; border: none; border-radius: 25px;">
+                                    <input type="submit" class="btn btn-styles" value="VER TODOS" style="border: none; border-radius: 25px;">
                                 </form>
                             </li>
                         </ul>
