--- a/cosmos/uni_app/templates/search.html
+++ b/cosmos/uni_app/templates/search.html
@@ -5,16 +5,32 @@
 
     <div class="row">
         <div class="col-lg-10 col-md-10 col-xs-10">
-            <h2 class="title">CARRERAS:</h2>                                              <!-- SHOWS ALL carreras FILTERED -->
+            <h2 class="title">CARRERAS:</h2> <!-- SHOWS ALL carreras FILTERED -->
             {% if carreras %}
-            <ul>{% for i in carreras %}<li><a href="{% url 'main:carrera' i.id %}">{{i}}</a></li>{% endfor %}</ul>
-            {% else %} <h3>No se han encontrado carreras</h3> {% endif %}
+                <div class="row">
+                    {% for carrera in carreras %}
+                        <div class="col-lg-4 col-md-6 col-xs-12 mb-4">
+                            <div class="card">
+                                <div class="card-header">
+                                    <h5 class="card-title">{{ carrera.name }}</h5>
+                                </div>
+                                <div class="card-body">
+                                    {{ carrera.cat.name }} en 
+                                    <a style="font-size: large;" href="{% url 'main:uni' carrera.uni.id %}">{{ carrera.uni.name }}</a> <br> <br>
+                                    <a href="{% url 'main:carrera' carrera.id %}" class="btn btn-styles">Ver detalles</a>
+                                </div>
+                            </div>
+                        </div>
+                    {% endfor %}
+                </div>
+            {% else %}
+                <h3>No se han encontrado carreras</h3>
+            {% endif %}
         </div>
-        <div class="col-lg-2 col-md-2 col-xs-2 bg-danger rounded-start p-3 text-center">
+        <div class="col-lg-2 col-md-2 col-xs-2 rounded-start p-3 text-center" style="background-color: #EEEAE1;">
             {% include "widgets/filters.html" %}
         </div>
     </div>
-
-
+    
 
 {% endblock %}
