--- a/cosmos/uni_app/templates/test.html
+++ b/cosmos/uni_app/templates/test.html
@@ -2,16 +2,16 @@
 {% block content %}                          <!-- GETS FROM ctx: carrera -->
 
 <div class="mt-5">
-    <h1 class="serif" style="text-align: center; font-size: 4rem; margin: 20px 0;">"Compara carreras con nuestro <br> <span class="italica">comparador de carreras</span>"</h1>
+    <h1 class="serif" style="text-align: center; font-size: 4rem; margin: 20px 0;">"Compara carreras con nuestro <br> <span class="fst-italic">comparador de carreras</span>"</h1>
     <br>
     <div class="d-flex justify-content-center align-items-center mb-4">
         <form class="input-group" role="search" method="GET" action="{% url 'main:search' %}" style="max-width: 600px; width: 100%;">
-            <button class="btn btn-danger input-group-text" style="background-color: #5A0000; border: none; border-radius: 25px; margin-right: 10px;" type="submit" id="search-addon">
+            <button class="btn btn-styles input-group-text" style="border: none; border-radius: 25px; margin-right: 10px;" type="submit" id="search-addon">
                 <i class="fa-solid fa-magnifying-glass"></i>
             </button>
             <input class="form-control" type="search" name="q" placeholder="Buscar por palabras clave" aria-label="Search" aria-describedby="search-addon" style="border-radius: 25px; margin-right: 10px;">
         </form>
-        <a class="btn btn-danger me-2" style="background-color: #5A0000; border: none; border-radius: 25px;" href="{% url 'main:test' %}">COMPARADOR</a>
+        <a class="btn btn-styles me-2" style="border-radius: 25px;" href="{% url 'main:test' %}">COMPARADOR</a>
     </div>
 </div>
 
