Valen changes done with CSS

--- a/cosmos/static/owncss/colors.css
+++ b/cosmos/static/owncss/colors.css
@@ -1,11 +1,10 @@
 .bg-reddish{background-color: #5A0000;}
-.bg-cream{background-color: #EEEAE1;}
+.bg-cream{background-color: #EEEAE1; color: black;}
 .btn-styles{
     background-color: #5A0000;
     color: white; border: none;
-    border-radius: 10px;
-
+    border-radius: 1rem;
 }
 .btn-styles:hover{
-    background-color: #8d1515;
+    background-color: #8d1515; color: white;
 }
