--- a/cosmos/uni_app/templates/home.html
+++ b/cosmos/uni_app/templates/home.html
@@ -6,10 +6,10 @@
     <br>
     <div class="d-flex justify-content-center align-items-center mb-4">
         <form class="input-group" role="search" method="GET" action="{% url 'main:search' %}" style="max-width: 600px; width: 100%;">
-            <button class="btn btn-styles input-group-text" style="border: none; border-radius: 25px; margin-right: 10px;" type="submit" id="search-addon">
+            <button class="btn btn-styles input-group-text rounded-5 me-2" type="submit" id="search-addon">
                 <i class="fa-solid fa-magnifying-glass"></i>
             </button>
-            <input class="form-control" type="search" name="q" placeholder="Buscar por palabras clave" aria-label="Search" aria-describedby="search-addon" style="border-radius: 25px; margin-right: 10px;">
+            <input class="form-control rounded-5 me-2" type="search" name="q" placeholder="Buscar por palabras clave" aria-describedby="search-addon">
         </form>
         <a class="btn btn-styles me-2" href="{% url 'main:test' %}">COMPARADOR</a>
     </div>
@@ -21,24 +21,24 @@
     <div class="col-lg-3 col-md-6 mb-4">
         <div class="card h-100">
             <div class="card-body">
-                <a href="{% url 'main:search' %}" class="card-title text-center no-line" style="font-size: 40px;">Carreras</a>
-                <p class="card-text" style="font-size: 15px;">Encuentra cursos y capacitaciones en diversas áreas que e ayudarán a complementar tus estudios y desarrollar nuevas habilidades.</p>
+                <a href="{% url 'main:search' %}" class="card-title text-center no-line fs-1 fw-bold">Carreras</a>
+                <p class="card-text fs-6">Encuentra cursos y capacitaciones en diversas áreas que e ayudarán a complementar tus estudios y desarrollar nuevas habilidades.</p>
             </div>
         </div>
     </div>
     <div class="col-lg-3 col-md-6 mb-4">
         <div class="card h-100">
             <div class="card-body">
-                <a href="#" class="card-title text-center no-line" style="font-size: 40px;">Cursos</a>
-                <p class="card-text" style="font-size: 15px;">Explora las distintas opciones de carreras universitarias y descubre cuál se ajusta a tu vocación y metas profesionales.</p>
+                <a href="#" class="card-title text-center no-line fs-1 fw-bold">Cursos</a>
+                <p class="card-text fs-6">Explora las distintas opciones de carreras universitarias y descubre cuál se ajusta a tu vocación y metas profesionales.</p>
             </div>
         </div>
     </div>
     <div class="col-lg-3 col-md-6 mb-4">
         <div class="card h-100">
             <div class="card-body">
-                <a href="#" class="card-title text-center no-line" style="font-size: 40px;">Becas</a>
-                <p class="card-text" style="font-size: 15px;">Descubre oportunidades de becas disponibles para financiar tus estudios y alcanzar tus sueños académicos sin preocupaciones económicas.</p>
+                <a href="#" class="card-title text-center no-line fs-1 fw-bold">Becas</a>
+                <p class="card-text fs-6">Descubre oportunidades de becas disponibles para financiar tus estudios y alcanzar tus sueños académicos sin preocupaciones económicas.</p>
             </div>
         </div>
     </div>
@@ -46,8 +46,8 @@
 </div>
 
 <div class="d-flex justify-content-center align-items-center mb-4">
-    <a class="btn btn-styles me-2" style="border: none; border-radius: 25px;" href="{% url 'main:unis' %}"> VER UNIVERSIDADES </a>
-    <a class="btn btn-styles me-2" style="border: none; border-radius: 25px;" href="{% url 'main:search' %}"> IR A BÚSQUEDA </a>
+    <a class="btn btn-styles me-2 rounded-5" href="{% url 'main:unis' %}"> VER UNIVERSIDADES </a>
+    <a class="btn btn-styles me-2 rounded-5" href="{% url 'main:search' %}"> IR A BÚSQUEDA </a>
 </div>
 
 <br>
@@ -62,14 +62,10 @@
                         <h2 class="title">{{ i.name }}</h2>
                     </div>
                     <div class="card-body">
-                        <ul class="list-unstyled mb-0">
-                            <li class="mb-2">
-                                <form method="GET" action="{% url 'main:search' %}">
-                                    <input type="hidden" name="cat" value="{{ i.id }}">
-                                    <input type="submit" class="btn btn-styles" value="VER TODOS" style="border: none; border-radius: 25px;">
-                                </form>
-                            </li>
-                        </ul>
+                        <form method="GET" action="{% url 'main:search' %}">
+                            <input type="hidden" name="cat" value="{{ i.id }}">
+                            <input type="submit" class="btn btn-styles rounded-5" value="VER TODOS">
+                        </form>
                     </div>
                 </div>
             </div>
