--- a/cosmos/static/owncss/colors.css
+++ b/cosmos/static/owncss/colors.css
@@ -1,10 +1,11 @@
-.bg-reddish{background-color: #5A0000;}
+
+.bg-reddish{background-color: #5A0000;} .color-reddish{color: #5A0000;}
+.bg-light-reddish{background-color: #8d1515; color: white;}
 .bg-cream{background-color: #EEEAE1; color: black;}
-.btn-styles{
-    background-color: #5A0000;
-    color: white; border: none;
-    border-radius: 1rem;
-}
-.btn-styles:hover{
-    background-color: #8d1515; color: white;
-}
+
+.links{color: #8d1515;} .links:hover{color: #5A0000;}
+
+.btn-styles{background-color: #5A0000; color: white; border: none; border-radius: 1rem;}
+.btn-styles:hover{background-color: #8d1515; color: white;}
+.btn-counter{background-color: white; color: black; border: none; border-radius: 1rem;}
+.btn-counter:hover{background-color: whitesmoke; color: black; border: none; border-radius: 1rem;}
