--- a/cosmos/uni_app/templates/home.html
+++ b/cosmos/uni_app/templates/home.html
@@ -1,76 +1,75 @@
 {% extends "base.html" %}{% block title %}Home{% endblock %}
 {% block content %}                          <!-- GETS FROM ctx: unis, cats & carreras -->
     
-<div class="mt-5">
-    <h1 class="serif" style="text-align: center; font-size: 4rem; margin: 20px 0;">"Encontrá tu lugar <br> en el <span class="fst-italic">universo</span>"</h1>
-    <br>
-    <div class="d-flex justify-content-center align-items-center mb-4">
-        <form class="input-group" role="search" method="GET" action="{% url 'main:search' %}" style="max-width: 600px; width: 100%;">
-            <button class="btn btn-styles input-group-text rounded-5 me-2" type="submit" id="search-addon">
+<h1 class="serif text-center my-5" style="font-size: 4rem;">"Encontrá tu lugar <br> en el <span class="fst-italic">universo</span>"</h1>
+
+<div class="d-flex justify-content-center">
+    <div class="d-flex align-items-center" style="width: 50%;">
+        <form class="input-group" role="search" method="GET" action="{% url 'main:search' %}">
+            <button class="btn btn-styles rounded-5 z-0" type="submit">
                 <i class="fa-solid fa-magnifying-glass"></i>
             </button>
-            <input class="form-control rounded-5 me-2" type="search" name="q" placeholder="Buscar por palabras clave" aria-describedby="search-addon">
+            <input class="form-control rounded-5 mx-2" type="search" name="q" placeholder="Buscar por palabras clave">
         </form>
-        <a class="btn btn-styles me-2" href="{% url 'main:test' %}">COMPARADOR</a>
     </div>
 </div>
 
-<br>
+<div class="d-flex justify-content-center align-items-center my-5">
+    <a class="btn btn-styles me-2" href="{% url 'main:unis' %}"> VER UNIVERSIDADES </a>
+    <a class="btn btn-styles me-2" href="{% url 'main:search' %}"> IR A BÚSQUEDA </a>
+    <a class="btn btn-styles" href="{% url 'main:test' %}">COMPARADOR</a>
+</div>
 
-<div class="row mb-5 justify-content-center">
-    <div class="col-lg-3 col-md-6 mb-4">
-        <div class="card h-100">
-            <div class="card-body">
-                <a href="{% url 'main:search' %}" class="card-title text-center no-line fs-1 fw-bold">Carreras</a>
-                <p class="card-text fs-6">Encuentra cursos y capacitaciones en diversas áreas que e ayudarán a complementar tus estudios y desarrollar nuevas habilidades.</p>
-            </div>
+<div class="row mb-3 justify-content-center">
+    <div class="col-3 mb-4 card h-100">
+        <div class="card-body">
+            <a href="{% url 'main:search' %}" class="card-title text-center no-line fs-1 fw-bold color-reddish">Carreras</a>
+            <p class="card-text fs-6">Encuentra cursos y capacitaciones en diversas áreas que e ayudarán a complementar tus estudios y desarrollar nuevas habilidades.</p>
         </div>
     </div>
-    <div class="col-lg-3 col-md-6 mb-4">
-        <div class="card h-100">
-            <div class="card-body">
-                <a href="#" class="card-title text-center no-line fs-1 fw-bold">Cursos</a>
-                <p class="card-text fs-6">Explora las distintas opciones de carreras universitarias y descubre cuál se ajusta a tu vocación y metas profesionales.</p>
-            </div>
+    <div class="col-3 mb-4 card h-100 mx-4">    
+        <div class="card-body">
+            <a href="#" class="card-title text-center no-line fs-1 fw-bold color-reddish">Cursos</a>
+            <p class="card-text fs-6">Explora las distintas opciones de carreras universitarias y descubre cuál se ajusta a tu vocación y metas profesionales.</p>
         </div>
     </div>
-    <div class="col-lg-3 col-md-6 mb-4">
-        <div class="card h-100">
-            <div class="card-body">
-                <a href="#" class="card-title text-center no-line fs-1 fw-bold">Becas</a>
-                <p class="card-text fs-6">Descubre oportunidades de becas disponibles para financiar tus estudios y alcanzar tus sueños académicos sin preocupaciones económicas.</p>
-            </div>
+    <div class="col-3 mb-4 card h-100">    
+        <div class="card-body">
+            <a href="#" class="card-title text-center no-line fs-1 fw-bold color-reddish">Becas</a>
+            <p class="card-text fs-6">Descubre oportunidades de becas disponibles para financiar tus estudios y alcanzar tus sueños académicos sin preocupaciones económicas.</p>
         </div>
     </div>
 </div>
-</div>
 
-<div class="d-flex justify-content-center align-items-center mb-4">
-    <a class="btn btn-styles me-2 rounded-5" href="{% url 'main:unis' %}"> VER UNIVERSIDADES </a>
-    <a class="btn btn-styles me-2 rounded-5" href="{% url 'main:search' %}"> IR A BÚSQUEDA </a>
-</div>
+{% load custom_filters %}
+<div class="mt-5 mx-5">
+    <div class="row">
+        {% for i in cats|dictsort:"name" %}
 
-<br>
-
-    {% load custom_filters %}
-    <div class="container mt-5">
-        <div class="row">
-            {% for i in cats|dictsort:"name" %}
-            <div class="col-md-6 mb-4">
-                <div class="card h-100">
-                    <div class="card-header">
-                        <h2 class="title">{{ i.name }}</h2>
-                    </div>
-                    <div class="card-body">
-                        <form method="GET" action="{% url 'main:search' %}">
-                            <input type="hidden" name="cat" value="{{ i.id }}">
-                            <input type="submit" class="btn btn-styles rounded-5" value="VER TODOS">
-                        </form>
-                    </div>
+        <div class="col-6 mb-4">
+            <div class="card">
+                <div class="card-header">
+                    <h2 class="title">{{ i.name }}</h2>
+                </div>
+                <div class="card-body">
+                    <ul class="mb-0">
+                        {% for j in carreras|get_by_cat:i.id %}
+                            <li class="mb-4"><a class="links" href="{% url 'main:carrera' j.id %}">{{j}}</a></li>
+                        {%endfor%}
+                        <li class="list-unstyled">
+                            <form method="GET" action="{% url 'main:search' %}">
+                                <input type="hidden" name="cat" value="{{ i.id }}">
+                                <input type="submit" class="btn btn-styles" value="VER TODOS">
+                            </form>
+                        </li>
+                    </ul>
+                    
                 </div>
             </div>
-            {% endfor %}
         </div>
-    </div>    
+        
+        {% endfor %}
+    </div>
+</div>    
 
 {% endblock %}
