--- a/cosmos/static/owncss/common.css
+++ b/cosmos/static/owncss/common.css
@@ -14,7 +14,7 @@
     position: fixed; top: 0; width: 100%; z-index: 1;
 }
 .collapse-btn{
-    width: 300px; position: fixed; left: 0; top: 56px; z-index: 2;
+    width: 300px; position: fixed; left: 0; top: 56px; z-index: 2; overflow-y: auto; max-height: 100vh;
 }
 
 .title-main{
@@ -23,7 +23,11 @@
 }
 .title{font-family: 'League', sans-serif;}
 .serif{font-family: 'Times New Roman', sans-serif;}
+
 .no-line {text-decoration: none;}
+.no-style {
+    background: none; border: none; padding: 0; cursor: pointer;
+}
 
 body{
     font-family: 'Garet', sans-serif;
