--- a/cosmos/uni_app/templates/home.html
+++ b/cosmos/uni_app/templates/home.html
@@ -22,7 +22,7 @@
           COMPARADOR
         </button>
         <ul class="dropdown-menu">
-          <li><a class="dropdown-item" href="{% url 'main:compare' 'uni' %}">Universidades</a></li>
+          <li><a class="dropdown-item" href="{% url 'main:compare' 'unis' %}">Universidades</a></li>
           <li><a class="dropdown-item" href="{% url 'main:compare' 'carreras' %}">Carreras</a></li>
         </ul>
       </div>
