--- a/cosmos/uni_app/templates/home.html
+++ b/cosmos/uni_app/templates/home.html
@@ -15,7 +15,7 @@
 </div>
 
 <div class="d-flex justify-content-center align-items-center my-5">
-    <a class="btn btn-styles me-2" href="{% url 'main:unis' %}">VER UNIVERSIDADES</a>
+    <a class="btn btn-styles me-2" href="{% url 'main:many' 'unis'%}">VER UNIVERSIDADES</a>
     <a class="btn btn-styles me-2" href="{% url 'main:search' %}">IR A BÚSQUEDA</a>
     <div class="dropdown">
         <button class="btn btn-styles dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -38,13 +38,13 @@
     </div>
     <div class="col-3 mb-4 card h-100 mx-4">    
         <div class="card-body">
-            <a href="#" class="card-title text-center no-line fs-1 fw-bold color-reddish">Cursos</a>
+            <a href="{% url 'main:many' 'cursos' %}" class="card-title text-center no-line fs-1 fw-bold color-reddish">Cursos</a>
             <p class="card-text fs-6">Explora las distintas opciones de carreras universitarias y descubre cuál se ajusta a tu vocación y metas profesionales.</p>
         </div>
     </div>
     <div class="col-3 mb-4 card h-100">    
         <div class="card-body">
-            <a href="#" class="card-title text-center no-line fs-1 fw-bold color-reddish">Becas</a>
+            <a href="{% url 'main:many' 'becas' %}" class="card-title text-center no-line fs-1 fw-bold color-reddish">Becas</a>
             <p class="card-text fs-6">Descubre oportunidades de becas disponibles para financiar tus estudios y alcanzar tus sueños académicos sin preocupaciones económicas.</p>
         </div>
     </div>
@@ -57,14 +57,14 @@
 
     <div class="col-6 mb-4">
         <div class="card">
-            <div class="card-header bg-cream">
+            <div class="card-header bg-cream" style="border-left: 1.5rem double {{i.color}};">
                 <h2 class="title mb-0">{{ i.name }}</h2>
             </div>
             <div class="card-body">
 
                 <ul class="mb-0">
                     {% for j in carreras|get_by_cat:i.id %}
-                        <li class="mb-3"><a class="links" href="{% url 'main:carrera' j.id %}">{{j}}</a></li>
+                        <li class="mb-3"><a class="links" href="{% url 'main:one' 'carreras' j.id %}">{{j}}</a></li>
                     {%endfor%}
                 </ul>
                 <form method="GET" action="{% url 'main:search' %}">
